Revert "Refactorings for additional JMH tests"
This reverts commit 0458da45265599feff44903a9bd55877411b7866.